examples/bad/n1-n2-immut-branch.cnla
enum OptionStr {
    WithOffset Str, Int;
    Some Str;
    None;
}

Int main() {
  con OptionStr o = OptionStr::WithOffset("...Canela", 3);
  match o {
    OptionStr::WithOffset s, c: {
        // Will cause a runtime error - s is immutable.
        s = "Canela";
        print("hmm... There's an offset\n");
    }
    _: {
        print("No offset!\n");
    }
  };

  return 0;
}